[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/button/arrow-back-pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/button/levelSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/button/arrow-back.png" type="Texture" id=4]
[ext_resource path="res://assets/button/arrow-next.png" type="Texture" id=5]
[ext_resource path="res://assets/font/OpenSans-BoldItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/button/arrow-next-pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/button/arrow-back-hover.png" type="Texture" id=8]
[ext_resource path="res://assets/button/arrow-next-hover.png" type="Texture" id=9]
[ext_resource path="res://assets/font/RussoOne-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/font/OpenSans-Italic.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/font/OpenSans-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/level_thumbnails/01.png" type="Texture" id=13]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="InputEventAction" id=4]
action = "ui_left"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "ui_right"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="InputEventAction" id=12]
action = "ui_accept"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.463287
margin_top = -0.231964
margin_right = 0.463257
margin_bottom = -0.231934
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wrap" type="VBoxContainer" parent="."]
anchor_left = 0.02
anchor_right = 0.98
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="wrap"]
margin_right = 983.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" parent="wrap/HBoxContainer" instance=ExtResource( 3 )]
margin_top = 19.0
margin_right = 153.484
margin_bottom = 66.3182
size_flags_horizontal = 0
size_flags_vertical = 4
shortcut = SubResource( 2 )
text = "btn_back"

[node name="RichTextLabel" type="RichTextLabel" parent="wrap/HBoxContainer"]
margin_left = 157.0
margin_right = 983.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]title_level_select[/center]"
text = "title_level_select"
fit_content_height = true
scroll_active = false

[node name="main" type="HBoxContainer" parent="wrap"]
margin_top = 90.0
margin_right = 983.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="wrap/main"]
margin_right = 320.0
margin_bottom = 500.0
rect_min_size = Vector2( 320, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="wrap/main/CenterContainer2"]
margin_left = 118.0
margin_top = 226.0
margin_right = 202.0
margin_bottom = 273.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="wrap/main/CenterContainer2/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 84.4843
margin_bottom = 47.3182

[node name="levelcenter" type="CenterContainer" parent="wrap/main"]
margin_left = 324.0
margin_right = 983.0
margin_bottom = 500.0
size_flags_horizontal = 3

[node name="levels" type="GridContainer" parent="wrap/main/levelcenter"]
margin_left = 79.0
margin_right = 579.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4

[node name="levelDetail" type="VBoxContainer" parent="wrap"]
visible = false
margin_top = 594.0
margin_right = 983.0
margin_bottom = 1045.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="containerPrev" type="HBoxContainer" parent="wrap/levelDetail"]
margin_right = 983.0
margin_bottom = 250.0
size_flags_vertical = 0

[node name="CenterContainer2" type="CenterContainer" parent="wrap/levelDetail/containerPrev"]
margin_right = 347.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="back_level" type="TextureButton" parent="wrap/levelDetail/containerPrev/CenterContainer2"]
margin_left = 141.0
margin_top = 93.0
margin_right = 205.0
margin_bottom = 157.0
shortcut = SubResource( 5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 8 )

[node name="preview" type="TextureRect" parent="wrap/levelDetail/containerPrev"]
margin_left = 351.0
margin_right = 631.0
margin_bottom = 250.0
rect_min_size = Vector2( 280, 250 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="wrap/levelDetail/containerPrev"]
margin_left = 635.0
margin_right = 983.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="next_level" type="TextureButton" parent="wrap/levelDetail/containerPrev/CenterContainer"]
margin_left = 142.0
margin_top = 93.0
margin_right = 206.0
margin_bottom = 157.0
shortcut = SubResource( 7 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="levelName" type="RichTextLabel" parent="wrap/levelDetail"]
margin_top = 254.0
margin_right = 983.0
margin_bottom = 283.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]01. Back to basics[/center]"
text = "01. Back to basics"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="wrap/levelDetail"]
margin_top = 287.0
margin_right = 983.0
margin_bottom = 291.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="records" type="RichTextLabel" parent="wrap/levelDetail"]
margin_top = 295.0
margin_right = 983.0
margin_bottom = 400.0
custom_fonts/bold_italics_font = SubResource( 9 )
custom_fonts/italics_font = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]1 - [i]00:00.[b]00[/b][/i]
2 - [i]00:00.[b]00[/b][/i]
3 - [i]00:00.[b]00[/b][/i]"
text = "1 - 00:00.00
2 - 00:00.00
3 - 00:00.00"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="wrap/levelDetail"]
margin_top = 404.0
margin_right = 983.0
margin_bottom = 451.318
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStart" parent="wrap/levelDetail/CenterContainer" instance=ExtResource( 3 )]
margin_left = 412.0
margin_right = 570.484
margin_bottom = 47.3182
shortcut = SubResource( 13 )
text = "btn_start"
[connection signal="pressed" from="wrap/HBoxContainer/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="visibility_changed" from="wrap/main" to="." method="_on_main_visibility_changed"]
[connection signal="pressed" from="wrap/levelDetail/containerPrev/CenterContainer2/back_level" to="." method="next_level" binds= [ -1 ]]
[connection signal="pressed" from="wrap/levelDetail/containerPrev/CenterContainer/next_level" to="." method="next_level" binds= [ 1 ]]
[connection signal="pressed" from="wrap/levelDetail/CenterContainer/btnStart" to="." method="_on_btnStart_pressed"]
